Atualizando melhorias no index

--- a/index.html
+++ b/index.html
@@ -60,6 +60,47 @@
 
     </section>
 
+    <section id="habilidades">
+        <h2>Habilidades  e  tecnologias</h2>
+
+        <table>
+
+            <thead>
+              <tr>
+                <th>Tecnologia</th>
+                <th>Nível</th>
+                <th>Descrição</th>
+              </tr>
+
+            <thead>
+
+            <tbody>
+              <tr>
+                <td>HTML</td>
+                <td>Avançado</td>
+                <td>Domínio completo da estruturação de páginas web usando HTML5.</td>
+              </tr>
+
+              <tr>
+                <td>CSS</td>
+                <td>Intermediário</td>
+                <td>Conhecimento sólido em estilização de páginas web, incluindo Flexbox e Grid.</td>
+              </tr>
+
+              <tr>
+                <td>JavaScript</td>
+                <td>Intermediário</td>
+                <td>Experiência em desenvolvimento de interatividade e manipulação do DOM.</td>
+              </tr>
+
+            </tbody>
+            
+            
+        </table>
+
+
+    </section>
+
     <footer>
         <p>Direitos reservados a Eduardo</p>
 
